--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 						<p class="title">{{ product.name }}</p>
 						<p class="price">{{ product.price | currency }}</p>
 						<p class="date">{{ product.pubdate | date }}</p>
+						<p class="rating"> {{ product.likes }}
+						<p class="likes" ng-click="plusOne($index)">+ </p>
+						</div>
 					</div>
 				</div>
       </div>
