--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 						<p class="title">{{ product.name }}</p>
 						<p class="price">{{ product.price | currency }}</p>
 						<p class="date">{{ product.pubdate | date }}</p>
-						<p class="rating"> {{ product.likes }}
-						<p class="likes" ng-click="plusOne($index)">+ </p>
+						<p class="rating">
+						<p class="likes" ng-click="plusOne($index)">+ {{ product.likes }}</p>
+						<p class="dislikes" ng-click="minusOne($index)">+ {{ product.dislikes }}</p>
 						</div>
 					</div>
 				</div>
