--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <div class="main" ng-controller="MainController">
       <div class="container">
          <div class="card">
-           <app-info info="move">
-           </app-info>
+           <app-info info="move"></app-info>
          </div>
-
         <div class="card">
          <app-info info="shutterbugg"></app-info>
         </div>
-
         <div class="card">
           <app-info info="gameboard"></app-info>
+        </div>
+        </div class="card">
+          <app-info info="forecast"></app-info>
         </div>
       </div>
     </div>
@@ -42,4 +42,5 @@
 
   </body>
 </html>
+
 
