Built-in and Custom Directives

--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
         <div class="card">
           <app-info info="gameboard"></app-info>
         </div>
-        </div class="card">
+        <div class="card">
           <app-info info="forecast"></app-info>
         </div>
+    		<div class="card" ng-repeat"app in apps">
+          <app-info info="apps"></app-info>
+        </div
+
       </div>
     </div>
 
@@ -42,5 +46,7 @@
 
   </body>
 </html>
+
+
 
 
