--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <!-- Directives -->
     <script src="js/directives/appInfo.js"></script>
 
+    <!-- Directives -->
+    <script src="js/directives/installApp.js"></script>
+
   </body>
 </html>
 
