--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </div>
     		<div class="card" ng-repeat"app in apps">
           <app-info info="apps"></app-info>
-        </div
+        </div>
+
+        <install-app></install-app>
 
       </div>
     </div>
@@ -49,6 +51,8 @@
 
   </body>
 </html>
+
+
 
 
 
