--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <!-- Directives -->
     <script src="js/directives/installApp.js"></script>
 
+    <!-- Services -->
+    <script src="js/services/forecast.js"></script>
+
   </body>
 </html>
 
