--- a/index.html
+++ b/index.html
@@ -1,39 +1,55 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
-
+    
     <!-- Include the AngularJS library -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
   </head>
-  <body ng-app="AppMarketApp">
-    <div class="header">
-      <div class="container">
-        <h1>App Market</h1>
-      </div>
-    </div>
+  <body ng-app="ForecastApp">
 
     <div class="main" ng-controller="MainController">
       <div class="container">
-         <div class="card">
-           <app-info info="move"></app-info>
-         </div>
-        <div class="card">
-         <app-info info="shutterbugg"></app-info>
-        </div>
-        <div class="card">
-          <app-info info="gameboard"></app-info>
-        </div>
-        <div class="card">
-          <app-info info="forecast"></app-info>
-        </div>
-    		<div class="card" ng-repeat"app in apps">
-          <app-info info="apps"></app-info>
-        </div>
+        <div class="row">
+          <div class="col-sm-5 col-sm-offset-7">
+            <h1>{{ fiveDay.city_name }}</h1>
+            <h2>5-day forecast</h2>
+            <div class="forecast" ng-repeat="day in fiveDay.days">
+              <div class="day row">
 
-        <install-app></install-app>
+                <!-- datetime -->
+                <div class="weekday col-xs-4">
+                  <p>{{ day.datetime | date }}</p>
+                </div>
 
+
+                <!-- icon -->
+                <div class="weather col-xs-3">
+                  <img ng-repeat="{{ day.icon }}">
+
+                </div>
+
+                <div class="col-xs-1"></div>
+
+
+                <!-- high -->
+                <div class="high col-xs-2">
+
+
+                </div>
+
+
+                <!-- low -->
+                <div class="low col-xs-2">
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </ul>
       </div>
     </div>
 
@@ -43,20 +59,13 @@
     <!-- Controllers -->
     <script src="js/controllers/MainController.js"></script>
 
-    <!-- Directives -->
-    <script src="js/directives/appInfo.js"></script>
-
-    <!-- Directives -->
-    <script src="js/directives/installApp.js"></script>
-
     <!-- Services -->
     <script src="js/services/forecast.js"></script>
 
+    <!-- Directives -->
+
+
   </body>
 </html>
-
-
-
-
 
 
