Had to change tag and quotes

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
                 <!-- high -->
                 <div class="high col-xs-2">
-                  <img ng-src="{{ day.high }}"></img>
+                  <p>{{ day.high }}<p>
                 </div>
 
                 <!-- low -->
                 <div class="low col-xs-2">
-                  <img ng-src="{{ day.low }}"></img>
+                  <p>{{ day.low }}<p>
                 </div>
 
               </div>
@@ -63,5 +63,7 @@
 
   </body>
 </html>
+
+
 
 
