--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-
+    <div ng-view></div>
 
     <!-- Modules -->
     <script src="js/app.js"></script>
@@ -35,3 +35,5 @@
 
   </body>
 </html>
+
+
